syntax = "proto3";

package example.shop;
option java_package = "com.proto.shop";
option java_multiple_files = true;

message OrderRequest {
    int32 id = 1;
    Product product = 2;
}

message Product {
    int32 id = 1;
    string name = 2;
    double price = 3;
}

message OrderResponse {
    int32 order_id = 1;
    int32 status = 2;
}

service OrderService {
    rpc PlaceOrder(OrderRequest) returns (OrderResponse);
    rpc GetOrderUpdate(OrderRequest) returns (OrderResponse);
}

//message Inventory {
//    int32 id = 1;
//    int32 product_id = 2;
//    double quantity = 3;
//}